[package]
name = "samp-sdk"
version = "0.8.3"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Bindings for C SA:MP SDK"
license = "MIT"
repository = "https://github.com/zottce/samp-sdk"
readme = "readme.md"
edition = "2018"

[dependencies]
lazy_static = "1.0.2"
detour = "0.5"
encoding = "0.2"
failure = "0.1.2"
failure_derive = "0.1.2"