[package]
name = "samp-codegen"
version = "0.1.1"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Codegen for samp-rs"
license = "MIT"
repository = "https://github.com/zottce/samp-rs/"
readme = "readme.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4", features = ["nightly"] }
syn = { version = "0.15", features = ["full", "fold"] }
quote = "0.6"