[package]
name = "samp-sdk"
version = "0.9.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = []
encoding = ["encoding_rs"]

[dependencies]
bitflags = "1.0.4"
encoding_rs = { version = "0.8.17", optional = true }

[build-dependencies]
colored = "1.7.0"