[package]
name = "samp-sdk"
version = "0.9.2"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Bindings for C SA:MP SDK"
license = "MIT"
repository = "https://github.com/zottce/samp-rs/"
readme = "readme.md"
edition = "2018"
build = "build.rs"

[features]
default = []
encoding = ["encoding_rs"]

[dependencies]
bitflags = "1.0.4"
encoding_rs = { version = "0.8.17", optional = true }

[build-dependencies]
colored = "1.7.0"

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"