[package]
name = "samp"
version = "0.1.2"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to develop SA:MP plugins"
license = "MIT"
repository = "https://github.com/zottce/samp-rs/"
readme = "../readme.md"
edition = "2018"

[features]
default = []
encoding = ["samp-sdk/encoding"]

[dependencies]
samp-sdk = { path = "../samp-sdk", version = "0.9.2" }
samp-codegen = { path = "../samp-codegen", version = "0.1.1" }
fern = "0.5.7"

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"